--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base{
+    body{
+        @apply bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100;
+        @apply min-h-screen;
+    }
+}
